third_party/move/tools/move-decompiler/tests/compiler-v2-test/variable-coalescing/branch_assigns_then_moves_then_assigns.exp
script {
    entry fun <SELF>_0() {
        if (!(5 == 5)) abort 42;
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: unexpected token
  ┌─ branch_assigns_then_moves_then_assigns.move:2:15
  │
2 │     entry fun <SELF>_0() {
  │               ^
  │               │
  │               Unexpected '<'
  │               Expected an identifier
